force-app/main/default/objects/Case_RecordType_CS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Case_Assignment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Assignment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Case_Origin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Case Origin Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Attachment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recordtype_Name__c</fullName>
        <label>Recordtype Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case RecordType CS</label>
</CustomObject>